feat(erp): consume org_scope — masterdata subtree containment + read-model symmetric read filter (TASK-ERP-BE-008)
erp now consumes the per-operator org_scope claim (department subtree-ROOT ids,
produced by TASK-BE-338), completing the membership-derived data-scope (ADR-MONO-020
D3 amendment). NET-ZERO: ["*"] / absent org_scope = current behavior.

masterdata-service:
- RoleScopeAuthorizationAdapter: flat dataScopeDepartmentIds.contains(target) →
  subtree-aware isWithinScopedSubtree (target→ancestor walk via existing
  DepartmentRepository.ancestors, depth-bounded + cycle-break E1; exact-match
  shortcut for target==root). isPlatformScope() ["*"] bypass + empty→DENY_SCOPE
  fail-closed UNCHANGED.

read-model-service:
- OrgScope VO (platform / bounded-roots / explicit-zero) + ReadAuthorizationGate.orgScope(jwt)
  (absent/"*" → platform = net-zero; explicit [] via hasClaim → zero-scope).
- QueryEmployeeOrgViewUseCase list/getOne filter by org_scope subtree
  (roots→descendants via DepartmentProjectionRepository.findSubtreeIds), composed
  with ?departmentId=. Out-of-scope detail → 404 MASTERDATA_NOT_FOUND (no leak);
  unprojected dept under bounded scope → conservatively excluded (E5, no fabrication).
- Controller wires readGate.orgScope(jwt) into both endpoints.

write·read data-scope now SYMMETRIC: an operator scoped to a subtree both writes
and sees only that subtree. :check BUILD SUCCESSFUL (masterdata 62, read-model 67,
0 failures; dispatcher-independent rerun). IT (@Tag integration, Testcontainers
MySQL+Kafka) = CI Linux authoritative gate.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>